--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "geofirex": "0.0.6",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
